@@ -52,7 +52,6 @@ import com.sun.jersey.spi.uri.rules.UriRules;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
@@ -69,8 +68,6 @@ import javax.ws.rs.core.UriBuilder;
 public final class WebApplicationContext implements UriRuleContext, ExtendedUriInfo {
 
     private final WebApplicationImpl app;
-
-    private Map<String, Object> properties;
 
     private ContainerRequest request;
     
@@ -105,11 +102,7 @@ public final class WebApplicationContext implements UriRuleContext, ExtendedUriI
     }
 
     public Map<String, Object> getProperties() {
-        if (properties != null) {
-            return properties;
-        }
-
-        return properties = new HashMap<String, Object>();
+        return request.getProperties();
     }
 
     
